--- a/wercker.yml
+++ b/wercker.yml
@@ -6,24 +6,25 @@ box: debian
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
-    # - postgres
-    # http://devcenter.wercker.com/docs/services/postgresql.html
+  # - postgres
+  # http://devcenter.wercker.com/docs/services/postgresql.html
 
-    # - mongodb
-    # http://devcenter.wercker.com/docs/services/mongodb.html
+  # - mongodb
+  # http://devcenter.wercker.com/docs/services/mongodb.html
 
 # This is the build pipeline. Pipelines are the core of wercker
 # Read more about pipelines on our dev center
 # http://devcenter.wercker.com/docs/pipelines/index.html
 build:
-    # Steps make up the actions in your pipeline
-    # Read more about steps on our dev center:
-    # http://devcenter.wercker.com/docs/steps/index.html
+  # Steps make up the actions in your pipeline
+  # Read more about steps on our dev center:
+  # http://devcenter.wercker.com/docs/steps/index.html
   steps:
-    - script:
-        name: echo
-        code: |
-          echo "hello world!"
+    - arjen/hugo-build:
+      version: "0.15"
+      theme: hugo-minimalist-theme
+      config: config.yaml
+      disable_pygments: true
 
 # deploy:
 #   steps:
