--- a/wercker.yml
+++ b/wercker.yml
@@ -3,6 +3,7 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box: debian
+
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
@@ -20,17 +21,20 @@ build:
   # Read more about steps on our dev center:
   # http://devcenter.wercker.com/docs/steps/index.html
   steps:
+    # Build Hugo site
     - arjen/hugo-build:
         version: "0.15"
         theme: hugo-minimalist-theme
         config: config.yaml
         disable_pygments: true
 
-# deploy:
-#   steps:
-#   - s3sync:
-#     source_dir: public/
-#     delete-removed: true
-#     bucket-url: $AWS_BUCKET_URL
-#     key-id: $AWS_ACCESS_KEY_ID
-#     key-secret: $AWS_SECRET_ACCESS_KEY
+deploy:
+  steps:
+    # Deploy site to Amazon S3
+    - wercker/s3sync:
+        key-id: $AWS_ACCESS_KEY_ID
+        key-secret: $AWS_SECRET_ACCESS_KEY
+        bucket-url: $AWS_BUCKET_URL
+        source_dir: public/
+        delete-removed: true
+        opts: --acl-public --add-header=Cache-Control:max-age=2592000
